--- a/hello.html
+++ b/hello.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+< lang="en">
 <head>
     <meta charset="UTF-8">
     <title></title>
 </head>
-<body>
+<>
 test
 time 2016.4.25
 </body>
